<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingEnd="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/series"
                android:layout_gravity="center_vertical"
                android:textAlignment="center" />
            <NumberPicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/picker_series" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/repetition"
                android:layout_gravity="center_vertical"
                android:textAlignment="center" />
            <NumberPicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/picker_repetition"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingEnd="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/charge"
                android:layout_gravity="center_vertical"
                android:textAlignment="center" />
            <NumberPicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/picker_charge"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rest_time"
                android:layout_gravity="center_vertical"
                android:textAlignment="center" />
            <NumberPicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/picker_rest_time"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/dialog_close"
            android:text="@string/close"
            style="@style/Base.Widget.AppCompat.Button.Borderless"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/dialog_save"
            android:text="@string/save"
            style="@style/Base.Widget.AppCompat.Button.Borderless"/>
    </LinearLayout>

</LinearLayout>