<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/min_margin"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/min_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/min_margin"
            style="@style/TextAppearance.AppCompat.Body1"
            android:text="@string/how_many_series"
            android:layout_gravity="center"/>
        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/min_margin"
            android:id="@+id/picker_series"
            android:layout_gravity="center"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_margin="@dimen/min_margin"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/min_margin"
            android:layout_weight="1"
            android:text="@string/how_many_rest_time"
            android:layout_gravity="center"
            style="@style/TextAppearance.AppCompat.Body1"/>
        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/picker_rest_time"
            android:layout_margin="@dimen/min_margin"
            android:clickable="true"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/min_margin"
        android:layout_marginRight="@dimen/min_margin"
        android:id="@+id/button_ok"
        android:text="@string/ok"
        android:textColor="@color/colorPrimary"
        style="@style/Widget.AppCompat.Button.Borderless"/>

</LinearLayout>