<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="120dp">

        <TableRow>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:weightSum="10"
                android:padding="5dp">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/check"
                    android:visibility="gone"/>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:id="@+id/thumbnail"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:orientation="vertical"
                    android:padding="5dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:id="@+id/tv_name"
                        android:textStyle="bold"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:weightSum="10"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="4"
                            android:text="@string/series"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="6"
                            android:id="@+id/tv_series"
                            android:textAlignment="textEnd"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:weightSum="10">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="4"
                            android:text="@string/repetition"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="6"
                            android:id="@+id/tv_repetitions"
                            android:textAlignment="textEnd"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:weightSum="10">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="4"
                            android:text="@string/charge"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="6"
                            android:id="@+id/tv_charge"
                            android:textAlignment="textEnd"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:weightSum="10">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="4"
                            android:text="@string/rest_time"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="6"
                            android:id="@+id/tv_rest_time"
                            android:textAlignment="textEnd"/>
                    </LinearLayout>
                </LinearLayout>


                <!--<ImageButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:id="@+id/ib_play"
                    android:src="@drawable/ic_play_circle"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"/>
-->
            </LinearLayout>
        </TableRow>
    </TableLayout>

</LinearLayout>